floor plane updated

--- a/index.html
+++ b/index.html
@@ -380,6 +380,10 @@
       </section>
       <section id="boxes" class="block background-color-grey-light">
         <div class="container">
+          <section class="video">
+            <iframe width="944" height="531" src="https://www.youtube.com/embed/EJTqgESBcqs" title="M3M Cullinan Project Overview | Prices | Location | Construction Update | Noida Sector 94 | Luxury" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+          </section>
           <div class="box">
             <div class="image width-50 pull-left">
               <img src="assets/img/do1.jpg" class="top-50" alt="" />
@@ -392,7 +396,7 @@
                     Where Luxury Meets Convenience
                   </h3>
                 </header>
-                <p>M3M Cullinan embodies a vision of maximizing comfort and satisfaction for all its residents. Its strategic location sets the stage for a lifestyle defined by ease and accessibility. Situated just a 5-minute drive from the Noida-Greater Noida Expressway, it offers seamless connectivity to the vibrant city of Noida and other major hubs.M3M Cullinan surrounds you with the essential amenities you desire.
+                <p>M3M Cullinan embodies a vision of maximizing comfort and satisfaction for all its residents. Its strategic location sets stage for a lifestyle defined by ease and accessibility. Situated just a 5-minute drive from  Noida-Greater Noida Expressway, it offers seamless connectivity  vibrant city of Noida and other major hubs.
                 </p>
                 <a href="#home" class="btn roll">Be the first to know!</a>
               </div>
@@ -404,7 +408,7 @@
                 <header><h3>
                   Premium Interiors: Where Elegance Meets Quality</h3></header>
                 <p>
-                  M3M The Cullinan sets the standard for luxury living with premium interiors that blend elegance and top-notch quality. The structural foundation is built to ensure earthquake resistance.
+                  M3M The Cullinan sets the standard for luxury living with premium interiors that blend elegance and top-notch quality. The structural is to built to ensure earthquake resistance. vibrant city of Noida and other major hubs,ensuring that your everyday needs are met effortlessly.
                 </p>
                 <a href="#home" class="btn roll">Be the first to know!</a>
               </div>
@@ -413,10 +417,7 @@
               <img src="assets/img/d02.jpg" alt="" />
             </div>
           </div>
-          <section class="video">
-            <iframe width="944" height="531" src="https://www.youtube.com/embed/EJTqgESBcqs" title="M3M Cullinan Project Overview | Prices | Location | Construction Update | Noida Sector 94 | Luxury" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-          </section>
+          
           <div class="box with-empty-space">
             <div class="width-40 pull-left">
               <div class="empty-space">
@@ -432,7 +433,7 @@
                   </h3>
                 </header>
                 <p>
-                  M3M The Cullinan takes everyday living to a higher level with modern comforts and top-quality fittings. Our plumbing system is meticulously designed with CPVC/PPR pipes and fittings for water supply, UPVC pipes for waste lines, and elegant stainless steel sinks in the kitchen. Additionally, all bathrooms are equipped with premium sanitary fixtures, reflecting our commitment to enhancing your daily living experience.
+                  M3M The Cullinan takes everyday living to a higher level with modern comforts and top-quality fittings. Our plumbing system is meticulously designed with CPVC/PPR pipes and fittings for water supply and elegant stainless steel sinks in the kitchen. Additionally, all bathrooms are equipped with premium sanitary fixtures, reflecting our commitment to enhancing your daily living experience.
                 </p>
                 <a href="#home" class="btn roll">Be the first to know!</a>
               </div>
@@ -464,9 +465,9 @@
                       <div class="description">
                         <dl>
                           <dt>Rooms:</dt>
-                          <dd>3 BHK+SQ</dd>
+                          <dd>3 BHK</dd>
                           <dt>Area:</dt>
-                          <dd>3312 Sqft</dd>
+                          <dd>3200 Sqft</dd>
                         </dl>
                       </div>
                     </div>
@@ -487,9 +488,9 @@
                       <div class="description">
                         <dl>
                           <dt>Rooms:</dt>
-                          <dd>4 BHK+SQ</dd>
+                          <dd>3.5 BHK</dd>
                           <dt>Area:</dt>
-                          <dd>3996 Sqft</dd>
+                          <dd>3270 Sqft</dd>
                         </dl>
                       </div>
                     </div>
@@ -510,9 +511,9 @@
                       <div class="description">
                         <dl>
                           <dt>Rooms:</dt>
-                          <dd>4 BHK+SQ</dd>
+                          <dd>4 BHK</dd>
                           <dt>Area:</dt>
-                          <dd>4874 Sqft</dl>
+                          <dd>4200 Sqft</dl>
                         </dl>
                       </div>
                     </div>
@@ -533,9 +534,9 @@
                       <div class="description">
                         <dl>
                           <dt>Rooms:</dt>
-                          <dd>5 BHK Penthouse</dd>
+                          <dd>4.5 BHK</dd>
                           <dt>Area:</dt>
-                          <dd>6418 Sqft</dd>
+                          <dd>4315 Sqft</dd>
                         </dl>
                       </div>
                     </div>
@@ -556,9 +557,9 @@
                       <div class="description">
                         <dl>
                           <dt>Rooms:</dt>
-                          <dd>5BHK</dd>
+                          <dd>5 BHK</dd>
                           <dt>Area:</dt>
-                          <dd>5900 Sqft</dd>
+                          <dd>6100 Sqft</dd>
                         </dl>
                       </div>
                     </div>
@@ -579,9 +580,9 @@
                       <div class="description">
                         <dl>
                           <dt>Rooms:</dt>
-                          <dd>5BHK</dd>
+                          <dd>5.5 BHK</dd>
                           <dt>Area:</dt>
-                          <dd>6100 Sqft</dd>
+                          <dd>6220  Sqft</dd>
                         </dl>
                       </div>
                     </div>
